styles/modal.css
@import url("theme.css");

.modal {
  top: 0;
  right: 0;
  bottom: 0;
  position: fixed;
  left: 0;
  inset: 0;
  background-color: rgba(41, 41, 41, 0.8);
}

.modal-content {
  right: 0;
  left: 0;
  bottom: 0%;
  color: white;
  z-index: 99;
  position: fixed;
  height: 85vh;
  padding: 0px;
  margin-left: auto;
  margin-right: auto;
  width: 700px;
  background: var(--modal-color);
  animation: downEntry 1s forwards cubic-bezier(0.32, 1, 0.23, 1);
  padding: 18px;
  border-radius: 20px 20px 0 0;
  overflow-y: scroll;
}

.modal-start-content {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  grid-template-rows: 1fr min-content;
  grid-template-areas: "item-1 item-2 item-3";
  padding: 18px;
}

.modal-item-a {
  grid-area: item-1;
  display: flex;
  justify-content: center;
}

.modal-item-b {
  grid-area: item-2;
}
.modal-item-c {
  grid-area: item-3;
}

.modal-img {
  width: 60px;
  height: 60px;
  border-radius: 6px;
  margin: 10px;
  border: 4px solid white;
}

.modal-title {
  margin: 20px;
  /* text-decoration-line: underline;
  text-decoration-style: double; */
  font-size: 28px;
  font-weight: 600;
}
.modal-excerpt {
  margin-top: 10px;
  margin-left: 20px;

  font-size: 15px;
  font-weight: 400;
}

.project-description {
  margin-left: 8px;
  font-size: 18px;
}

.modal-main-content {
  margin-left: 18px;
}

.modal-tags {
  display: flex;
}

.modal-image-drawer {
  display: flex;
  justify-content: center;
}

.modal-project-link {
  font-size: 30px;
  margin-top: 18px;
  margin-left: 10px;
  margin-bottom: 8px;
  color: var(--card-font-color);
  cursor: pointer;
}

@keyframes downEntry {
  0% {
    transform: translate(0, 100%);
  }
  100% {
    transform: translate(0, 0);
  }
}

@media (max-width: 768px) {
  .modal-content {
    width: 100%;
  }

  .modal-start-content {
    grid-template-columns: 1fr;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .modal-item-b {
    text-align: center;
  }
  .modal-item-c {
    text-align: center;
  }
  .modal-project-link {
    margin-top: 8px;
  }
}

